--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,14 @@
 
+
 # HTID:12904019: DO NOT REMOVE OR MODIFY THIS LINE AND THE LINES BELOW
-php_value display_errors 1
+
+#php_value display_errors 1
+
 # DO NOT REMOVE OR MODIFY THIS LINE AND THE LINES ABOVE HTID:12904019:
+
+# php -- BEGIN cPanel-generated handler, do not edit
+# Set the “ea-php74” package as the default “PHP” programming language.
+<IfModule mime_module>
+  AddHandler application/x-httpd-ea-php74 .php .php7 .phtml
+</IfModule>
+# php -- END cPanel-generated handler, do not edit
